--- a/school/templates/admin.html
+++ b/school/templates/admin.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 
 <head>
@@ -78,4 +78,47 @@
   </div>
 </body>
 
+</html> -->
+
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Panel Admina</title>
+    <link rel="stylesheet" href="/static/style/admin/css/style.min.css" />
+  </head>
+
+  <body>
+    <h1>Witaj na stronie administratora! :)</h1>
+    <h2>Wybierz, kim chcesz zarządzać:</h2>
+    <div class="container">
+      <div class="wrap">
+        <a href="/admin1">Uczniowie</a>
+        <ul>
+          <li>Dodawanie uczniów</li>
+          <li>Edycja danych uczniów</li>
+          <li>Wyszukiwanie uczniów</li>
+          <li>Usuwanie uczniów</li>
+        </ul>
+
+        <div class="img">
+          <img src="/static/students.png" />
+        </div>
+      </div>
+      <div class="wrap">
+        <a href="/admin2">Pracownicy</a>
+        <ul>
+          <li>Dodawanie pracowników</li>
+          <li>Edycja danych pracowników</li>
+          <li>Wyszukiwanie pracowników</li>
+          <li>Usuwanie pracowników</li>
+        </ul>
+
+        <div class="img">
+          <img src="/static/employees.png" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
