--- a/school/templates/witaj.html
+++ b/school/templates/witaj.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 
 <head>
@@ -33,4 +33,22 @@
 
 </body>
 
+</html> -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Strona główna szkoły</title>
+    <link rel="stylesheet" href="/static/style/witaj/css/style.min.css" />
+  </head>
+
+  <body>
+    <div class="login">
+      <h1>Witaj na stronie szkoły! :)</h1>
+      <a href="/login">Przejdź do logowania</a>
+    </div>
+    <div class="img">
+      <img src="/static/szkola.png" />
+    </div>
+  </body>
 </html>
