--- a/school/templates/administrator.html
+++ b/school/templates/administrator.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 
 <head>
@@ -93,4 +93,98 @@
 
 </body>
 
+</html> -->
+
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Uczniowie</title>
+    <link rel="stylesheet" href="/static/style/administrator/css/style.min.css" />
+  </head>
+
+  <body>
+    <div class="container">
+      <div class="addEmpl">
+        <form method="POST" action="dodaj2">
+          <input
+            type="hidden"
+            name="nr_pracownika"
+            value="1"
+            class="form-control"
+            readonly="readonly"
+          />
+          <div>
+            <button type="submit" action="submit">
+              Dodaj nowego ucznia!
+            </button>
+          </div>
+        </form>
+      </div>
+
+      <h2>Lista wszystkich uczniów</h2>
+      <table>
+        <tr>
+          <td>ID</td>
+          <td>Imię</td>
+          <td>Drugie imię</td>
+          <td>Nazwisko</td>
+          <td>Płeć</td>
+          <td>Data urodzenia</td>
+          <td>Klasa</td>
+          <td>Pesel</td>
+          <td>Akcje</td>
+        </tr>
+
+        {% for student in allstudents %}
+        <tr class="odd">
+          <td>{{ student.student_id }}</td>
+          <td>{{ student.first_name }}</td>
+          <td>{{ student.middle_name }}</td>
+          <td>{{ student.last_name }}</td>
+          <td>{{ student.gender }}</td>
+          <td>{{ student.date_of_birth }}</td>
+
+          {% for kla in klasy %} {% if kla.class_id == student.class_field_id %}
+          <td>{{kla.level}} {{kla.letter}}</td>
+          {% endif %} {% endfor %}
+
+          <td>{{ student.pesel }}</td>
+          <td>
+            <form method="POST" action="wezdane2">
+              <input
+                type="hidden"
+                name="nr_studenta"
+                value="{{student.student_id}}"
+                class="form-control"
+                readonly="readonly"
+              />
+              <div class="btnWrapper">
+                <button class="emplData" type="submit" action="submit">
+                  Edytuj dane ucznia!
+                </button>
+              </div>
+            </form>
+
+            <form class="form" method="POST" action="usun2">
+              <input
+                type="hidden"
+                name="nr_studenta"
+                value="{{student.student_id}}"
+                class="form-control"
+                readonly="readonly"
+              />
+              <div class="btnWrapper">
+                <button type="submit" action="submit" class="emplData">
+                  Usuń ucznia!
+                </button>
+              </div>
+            </form>
+          </td>
+        </tr>
+        {% endfor %}
+      </table>
+    </div>
+  </body>
 </html>
