--- a/school/templates/dodaj2.html
+++ b/school/templates/dodaj2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 
 <head>
@@ -94,4 +94,202 @@
   </div>
 </body>
 
+</html> -->
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Dodanie nowego ucznia</title>
+    <link rel="stylesheet" href="/static/style/dodaj2/css/style.min.css" />
+  </head>
+
+  <body>
+    <div class="form">
+      <form action="dodawanieUcznia" method="post">
+        <div class="input">
+          <div class="inputBox">
+            <label for="numer"> </label>
+            <input id="numer" type="hidden" name="numer" readonly="readonly" />
+            <label for="your_name">Imię: </label>
+            <input
+              id="your_name"
+              type="text"
+              name="your_name"
+              maxlength="30"
+              placeholder="wpisz imie..."
+              required
+            />
+          </div>
+          <div class="inputBox">
+            <label for="middle_name">Drugie imie: </label>
+            <input
+              id="middle_name"
+              type="text"
+              name="middle_name"
+              maxlength="30"
+              placeholder="wpisz drugie imie..."
+              required
+            />
+          </div>
+          <div class="inputBox">
+            <label for="last_name">Nazwisko: </label>
+            <input
+              id="last_name"
+              type="text"
+              name="last_name"
+              maxlength="30"
+              placeholder="wpisz nazwisko..."
+              required
+            />
+          </div>
+          <div class="inputBox">
+            <label for="gender">Płeć: (wpisz M lub F)</label>
+            <input id="gender" type="text" name="gender" maxlength="1" required />
+          </div>
+          <div class="inputBox">
+            <label for="date">Data urodzenia: </label>
+            <input id="date" type="date" name="date" value="1920-01-01" />
+          </div>
+          <div class="inputBox">
+            <label for="class_id">Klasa: (1-8) (A-C) </label>
+            <input
+              id="class_id"
+              type="text"
+              name="class_id"
+              maxlength="2"
+              placeholder="Wpisz klasę..."
+              required
+            />
+          </div>
+          <div class="inputBox">
+            <label for="pesel">Pesel: </label>
+            <input
+              id="pesel"
+              type="number"
+              name="pesel"
+              min="10000000000"
+              max="99999999999"
+              placeholder="Wpisz pesel..."
+              required
+            />
+          </div>
+          <div class="inputBox">
+            <label for="numer_rodzica"></label>
+            <input id="numer_rodzica" type="hidden" name="numer_rodzica" readonly="readonly" />
+            <label for="imie_rodzica">Imię rodzica: </label>
+            <input
+              id="imie_rodzica"
+              type="text"
+              name="imie_rodzica"
+              maxlength="20"
+              placeholder="Wpisz imię rodzica..."
+              required
+            />
+          </div>
+          <div class="inputBox">
+            <label for="nazwisko_rodzica">Nazwisko rodzica: </label>
+            <input
+              id="nazwisko_rodzica"
+              type="text"
+              name="nazwisko_rodzica"
+              maxlength="20"
+              placeholder="Wpisz nazwisko rodzica..."
+              required
+            />
+          </div>
+          <div class="inputBox">
+            <label for="status_rodzica">Status rodzica (wpisz P (rodzic) lub G(opiekun)): </label>
+            <input
+              id="status_rodzica"
+              type="text"
+              name="status_rodzica"
+              maxlength="1"
+              placeholder="Wpisz status rodzica..."
+              required
+            />
+          </div>
+          <div class="inputBox">
+            <label for="phone_number_rodzica">Numer telefonu rodzica: </label>
+            <input
+              id="phone_number_rodzica"
+              type="number"
+              name="phone_number_rodzica"
+              min="100000000"
+              max="999999999"
+              placeholder="Wpisz numer telefonu..."
+              required
+            />
+          </div>
+          <div class="inputBox">
+            <label for="email_rodzica">Email rodzica: </label>
+            <input
+              id="email_rodzica"
+              type="text"
+              name="email_rodzica"
+              maxlength="40"
+              placeholder="Wpisz email rodzica..."
+              required
+            />
+          </div>
+
+          <div class="inputBox">
+            <label for="numer_adresu"></label>
+            <input id="numer_adresu" type="hidden" name="numer_adresu" readonly="readonly" />
+            <label for="street_address">Adres: </label>
+            <input
+              id="street_address"
+              type="text"
+              name="street_address"
+              maxlength="30"
+              placeholder="Wpisz adres..."
+              required
+            />
+          </div>
+          <div class="inputBox">
+            <label for="postal_code">Kod pocztowy (bez myślnika np. 12345): </label>
+            <input
+              id="postal_code"
+              type="number"
+              name="postal_code"
+              min="10000"
+              max="99999"
+              placeholder="Wpisz kod pocztowy..."
+              required
+            />
+          </div>
+          <div class="inputBox">
+            <label for="city">Miasto: </label>
+            <input
+              id="city"
+              type="text"
+              name="city"
+              maxlength="40"
+              placeholder="Wpisz miasto..."
+              required
+            />
+          </div>
+          <div class="inputBox">
+            <label for="country_name">Kraj: </label>
+            <input
+              id="country_name"
+              type="text"
+              name="country_name"
+              maxlength="30"
+              placeholder="Wpisz kraj..."
+              required
+            />
+          </div>
+          <div class="inputBox btnCenter">
+            <input type="submit" value="OK" />
+          </div>
+        </div>
+      </form>
+      <form class="input">
+        <div class="inputBox btnCenter">
+          <input type="button" value="Powrót" onclick="history.back()" />
+        </div>
+      </form>
+    </div>
+  </body>
 </html>
