--- a/school/templates/login.html
+++ b/school/templates/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 
 <head>
@@ -40,4 +40,38 @@
   </div>
 
 </body>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Students</title>
+    <link rel="stylesheet" href="/static/style/login/css/style.min.css" />
+  </head>
+
+  <body>
+    <div class="form">
+      <form class="justify-content-center" method="POST" action="zalogowanie" name="logowanie">
+        <h2>Login</h2>
+        <div class="input">
+          <div class="inputBox">
+            <label>Nazwa użytkownika</label>
+            <input type="text" name="login" placeholder="przyklad@szkola.pl" />
+          </div>
+          <div class="inputBox">
+            <label>Hasło</label>
+            <input type="password" name="haslo" placeholder="········" />
+          </div>
+          <div class="inputBox">
+            <input type="submit" action="submit" name="" value="Zaloguj się" />
+          </div>
+        </div>
+      </form>
+    </div>
+
+    <div class="img">
+      <img src="/static/penguin.gif" />
+    </div>
+  </body>
 </html>
