--- a/school/templates/nauczyciel.html
+++ b/school/templates/nauczyciel.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 
 <head>
 	<link rel="stylesheet" href="/static/hack.css">
@@ -63,4 +63,64 @@
 	</div>
 </body>
 
+</html> -->
+
+
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Uczniowie - widok nauczyciela</title>
+    <link rel="stylesheet" href="/static/style/nauczyciel/css/style.min.css" />
+  </head>
+
+  <body>
+    <div class="container">
+      <h2>Oto Twoi uczniowie! Możesz przeglądać i edytować ich dane.</h2>
+      <table>
+        <tr>
+          <td>Numer</td>
+          <td>Imię</td>
+          <td>Drugie imię</td>
+          <td>Nazwisko</td>
+          <td>Płeć</td>
+          <td>Data urodzenia</td>
+          <td>Klasa</td>
+          <td>Pesel</td>
+        </tr>
+
+        {% for student in allstudents %}
+        <tr>
+          <td>{{ student.student_id }}</td>
+          <td>{{ student.first_name }}</td>
+          <td>{{ student.middle_name }}</td>
+          <td>{{ student.last_name }}</td>
+          <td>{{ student.gender }}</td>
+          <td>{{ student.date_of_birth }}</td>
+
+          {% for kla in klasy %} {% if kla.class_id == student.class_field_id %}
+          <td>{{kla.level}} {{kla.letter}}</td>
+          {% endif %} {% endfor %}
+
+          <td>{{ student.pesel }}</td>
+          <td>
+            <form method="POST" action="wezdane1">
+              <input
+                type="hidden"
+                name="nr_studenta"
+                value="{{student.student_id}}"
+                class="form-control"
+                readonly="readonly"
+              />
+              <div class="btnWrapper">
+                <button type="submit" action="submit" class="editData">
+                  Edytuj!
+                </button>
+              </div>
+            </form>
+          </td>
+        </tr>
+        {% endfor %}
+      </table>
+    </div>
+  </body>
 </html>
